# aduib-mcp-router

./: README.md  pyproject.toml  test_client_persistence.py
.github/workflows/: python-publish2.yml
aduib_mcp_router/: .env.production  __init__.py  _main_.py  aduib_app.py  app.py  app_factory.py  fast_mcp.py  mcp_factory.py
aduib_mcp_router/configs/deploy/: __init__.py
aduib_mcp_router/configs/logging/: __init__.py
aduib_mcp_router/configs/remote/: __init__.py  base.py
aduib_mcp_router/configs/remote/nacos/: client.py
aduib_mcp_router/configs/router/: __init__.py
aduib_mcp_router/mcp_router/: chromadb.py  mcp_client.py  router_factory.py  router_manager.py  types.py
aduib_mcp_router/mcp_service/: playground.py  prompt.py  tools.py
aduib_mcp_router/mcp_service/static/playground/: playground.css  playground.html  playground.js
aduib_mcp_router/utils/: async_utils.py
deploy/: Dockerfile
