[project]
name = "aduib-mcp-router"
dynamic = ["version"]
description = "A Router service for MCP service discovery and routing."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "chaorenex1", email = "24537608z@gmail.com"},
    ]
dependencies = [
    "bcrypt>=4.3.0",
    "nacos-sdk-python>=2.0.1",
    "nacos-mcp-wrapper-python",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pyyaml",
    "pytz"
]
[project.scripts]
aduib-mcp-router = "aduib-mcp-router:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aduib_rpc"]

[build-system]
requires = ["hatchling","uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
exclude = ["tests/"]

[tool.uv-dynamic-versioning]
vcs = "git"
format = "{base}"

[tool.uv]
[dependency-groups]
dev= [
    "pytest==8.4.1"
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
